--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 
 
 install:
-  - choco install python --version 3.9.0
+  - choco install python --version $PYVER 
 
 # Command to run tests, e.g. python setup.py test
 script:
@@ -25,7 +25,7 @@ script:
   - echo $PYSHORT
   - echo $CRYPTO
   - echo $PATH
-  - python -m pip install --upgrade pip
-  - pip install -U azure-cli
+  - /c/Python$PYSHORT/python -m pip install --upgrade pip
+  - /c/Python$PYSHORT/pip install -U azure-cli
 
 
