--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
   - echo $PYSHORT
   - echo $CRYPTO
   - echo $PATH
-  - /c/Python$PYSHORT/python -m pip install --upgrade pip
-  - /c/Python$PYSHORT/pip install -U azure-cli
+  - python -m pip install --upgrade pip
+  - pip install -U cryptography==$CRYPTO
 
 
