--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,20 @@
 # Config file for automatic testing at travis-ci.com
 
-language: shell
-os: windows
+language: python
+os: linux
+python:
+- "3.8"
+- "3.9-dev"
 env:
-- PYVER=3.8.6 PYSHORT=38 CRYPTO=2.9.1
-- PYVER=3.9.0 PYSHORT=39 CRYPTO=2.9.1
-- PYVER=3.8.6 PYSHORT=38 CRYPTO=2.9.2
-- PYVER=3.9.0 PYSHORT=39 CRYPTO=2.9.2
-- PYVER=3.8.6 PYSHORT=38 CRYPTO=3.0
-- PYVER=3.9.0 PYSHORT=39 CRYPTO=3.0
-- PYVER=3.8.6 PYSHORT=38 CRYPTO=3.1
-- PYVER=3.9.0 PYSHORT=39 CRYPTO=3.1
-- PYVER=3.8.6 PYSHORT=38 CRYPTO=3.1.1
-- PYVER=3.9.0 PYSHORT=39 CRYPTO=3.1.1
+- CRYPTO=2.9.1
+- CRYPTO=2.9.2
+- CRYPTO=3.0
+- CRYPTO=3.1
+- CRYPTO=3.1.1
 
-
-install:
-  - choco install python --version $PYVER 
 
 # Command to run tests, e.g. python setup.py test
 script:
-  - export PATH=/c/Python$PYSHORT:/c/Python$PYSHORT/Scripts:$PATH
-  - echo $PYVER
-  - echo $PYSHORT
-  - echo $CRYPTO
-  - echo $PATH
   - python -m pip install --upgrade pip
   - pip install -U cryptography==$CRYPTO
 
